# emergensee-facerecognition

./: .env.example  .gitignore  Dockerfile  INTERNALS.md  README.md  docker-compose.yml  pyproject.toml
src/: config.py  dependencies.py  main.py
src/adapters/ai/: deepface_adapter.py  mock_adapter.py
src/adapters/persistence/: file_face_storage.py  mongo_face_storage.py
src/api/routers/: faces.py
src/api/schemas/: face_schemas.py
src/application/: delete_face.py  detect_faces.py  recognize_faces.py  register_face.py
src/domain/entities/: face.py
src/domain/ports/: face_detection_port.py  face_recognition_port.py  face_storage_port.py
