[tool.poetry]
name = "emergensee-facerecognition"
version = "0.1.0"
description = "EmergenSee AI Microservice — Face Recognition"
authors = ["EmergenSee Engineering <engineering@emergensee.io>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.9"
motor = "^3.4.0"

# --- AI / CV Libraries (uncomment when adapters are implemented) ---
# opencv-python-headless = "^4.10.0"
# deepface = "^0.0.93"
# numpy = "^1.26.0"
# torch = { version = "^2.3.0", source = "pytorch" }
# torchvision = { version = "^0.18.0", source = "pytorch" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
